aks-yaml/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: group6acr.azurecr.io/frontend:v21
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
